# gambas

./: .component  .gitignore  .gitlab-ci.yml  .info  .list  .project  .settings  .startup  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.html  Makefile.am  README  README.FEDORA  README.HOW-TO-PACKAGE-GAMBAS  README.HOW-TO-PACKAGE-GAMBAS.html  README.REDHAT  README.commit  README.md  README.svn-commit  TODO  Unittests  VERSION  acinclude.m4  build-dist  cleanup.sh  component.am  configure.ac  license  reconf  reconf-all  version.m4
app/: Makefile.am  configure.ac
app/desktop/: gambas2.desktop  gambas3.appdata.xml  gambas3.desktop
app/mime/: application-x-gambasscript.xml  application-x-gambasserverpage.xml
app/src/: CMakeLists.txt  INSTALL
comp/: CMakeLists.txt  Makefile.am  config.h.in  configure.ac
comp/gb.chart/: .info
comp/gb.db.form/: .component
comp/gb.dbus.trayicon/: .project
comp/gb.desktop/: .component  .list  .project
comp/gb.eval.highlight/: .component
comp/gb.form/: .list
comp/gb.form.dialog/: .list
comp/gb.form.editor/: .info
comp/gb.form.stock/: .project
comp/gb.form.terminal/: .component  .project  Text1
comp/gb.logging/: .component  .info  .list
comp/gb.map/: .component
comp/gb.media.form/: .component  .project
comp/gb.memcached/: .component  .list
comp/gb.report2/: .project  FunctionsList
comp/gb.scanner/: .component
comp/gb.term.form/: .info  .project
comp/gb.termapp/: .component
comp/gb.util/: .project
comp/gb.util.web/: .list  .project
comp/gb.web.feed/: .component
comp/gb.web.form/: .component  .info  .list  ac.js  lib.js  style.css
comp/src/: order
examples/: Makefile.am  configure.ac
gb.cairo/: Makefile.am  configure.ac
gb.cairo/src/: Makefile.am  c_cairo.c  c_cairo.h  c_surface.c  c_surface.h  gb.cairo.component  main.c  main.h
gb.compress.zlib/: Makefile.am  config.h.in  configure.ac
gb.compress.zlib/src/: Makefile.am  gb.compress.zlib.component  main.c  main.h
gb.corba/: Makefile.am  README  config.h.in  configure.ac
gb.corba/src/: CCorbaApplication.cpp  CCorbaApplication.h  Makefile.am  gb.corba.component  main.cpp  main.h
gb.crypt/: Makefile.am  config.h.in  configure.ac  ltmain.sh
gb.crypt/src/: Makefile.am  c_crypt.c  c_crypt.h  gb.crypt.component  main.c  main.h
gb.db.firebird/: Makefile.am  README  config.h.in  configure.ac
gb.db.firebird/src/: Makefile.am  all_in_one.cpp  gb.db.firebird.component  main.cpp  main.h
gb.db.mysql/: Makefile.am  config.h.in  config.sub  configure.ac
gb.db.mysql/src/: Makefile.am  gb.db.mysql.component  main.c  main.h
gb.db.odbc/: Makefile.am  config.h.in  configure.ac
gb.db.odbc/src/: Makefile.am  main.c  main.h
gb.db.postgresql/: Makefile.am  config.h.in  configure.ac
gb.db.postgresql/src/: Makefile.am  main.c  main.h
gb.db.sqlite2/: Makefile.am  TODO  config.h.in  configure.ac
gb.db.sqlite2/src/: Makefile.am  dataset.cpp  dataset.h  gb.db.sqlite2.component  main.cpp  main.h  qry_dat.cpp  qry_dat.h  sqlitedataset.cpp  sqlitedataset.h  stringhelper.cpp  stringhelper.h
gb.db.sqlite3/: Makefile.am  config.h.in  configure.ac
gb.db.sqlite3/src/: Makefile.am  dataset.cpp  dataset.h  gb.db.sqlite3.component  gb_buffer.c  gb_buffer.h  helper.c  helper.h  main.c  main.cpp  main.h  qry_dat.cpp  qry_dat.h  sqlitedataset.cpp  sqlitedataset.h  stringhelper.cpp  stringhelper.h
gb.desktop/: Makefile.am  configure.ac  gb_list.h  gb_list_temp.h
gb.desktop/src/: Makefile.am  desktop.c  desktop.h  gb.desktop.component  gb_list.c  main.c  main.h  x11.c  x11.h
gb.gmp/: Makefile.am  configure.ac
gb.gmp/src/: Makefile.am  c_bigint.c  c_bigint.h  c_rational.c  c_rational.h  main.c  main.h
gb.gsl/: configure.ac
gb.gsl/src/: Makefile.am  c_complex.c  c_complex.h  c_complexpolynomial.c  c_complexpolynomial.h  c_gsl.c  c_gsl.h  c_matrix.c  c_matrix.h  c_newtonpolynomial.c  c_newtonpolynomial.h  c_polynomial.c  c_polynomial.h  c_vector.c  c_vector.h  gb.gsl.component  main.c  main.h
gb.gtk/: Makefile.am  TODO  config.h.in  configure.ac  gb.form.arrangement.h  share
gb.gtk.svg/: Makefile.am  README  config.h.in  configure.ac
gb.gtk.svg/src/: CSVG.c  CSVG.h  Makefile.am  gb.gtk.svg.component  main.c  main.h
gb.gtk/src/: CButton.cpp  CButton.h  CClipboard.cpp  CClipboard.h  CColor.cpp  CColor.h  CColumnView.cpp  CColumnView.h  CConst.cpp  CConst.h  CContainer.cpp  CContainer.h  CDialog.cpp  CDialog.h  CDraw.cpp  CDraw.h  CDrawingArea.cpp  CDrawingArea.h  CFont.cpp  CFont.h  CFrame.cpp  CFrame.h  CGridView.cpp  CGridView.h  CIconView.cpp  CIconView.h  CImage.cpp  CImage.h  CKey.cpp  CKey.h  CLabel.cpp  CLabel.h  CListBox.cpp  CListBox.h  CListView.cpp  CListView.h  CMenu.cpp  CMenu.h  CMessage.cpp  CMessage.h  (+163 more)
gb.gtk3/: configure.ac  gb.paint.h  share
gb.gtk3/src/: CClipboard.h  CColor.h  CConst.h  CDialog.cpp  CDrawingArea.h  CFont.cpp  CFrame.h  CImage.h  CKey.h  CMessage.h  CMouse.cpp  CMovieBox.cpp  CMovieBox.h  CProgress.cpp  CProgress.h  CScreen.cpp  CSeparator.h  CSpinBox.cpp  CStock.cpp  CStock.h  CStyle.h  CTextArea.cpp  CTrayIcon.cpp  CWatcher.cpp  CWidget.h  CWindow.cpp  Makefile.am  cpaint_impl.h  csvgimage.h  font-parser.h  gapplication.h  gb.gtk.h  gb.gtk3.component  gcontainer.cpp  gcontainer.h  gcontrol.h  gcursor.cpp  gcursor.h  gdesktop.h  gdialog.h  (+39 more)
gb.image.imlib/: Makefile.am  configure.ac
gb.image.imlib/src/: Makefile.am  c_image.c  c_image.h  c_imlib.c  c_imlib.h  gb.image.imlib.component  main.c  main.h
gb.image.io/: Makefile.am  configure.ac
gb.image.io/src/: Makefile.am  c_image.c  c_image.h  gb.image.io.component  main.c  main.h
gb.inotify/: Makefile.am  configure.ac
gb.inotify/src/: Makefile.am  main.h
gb.input/: Makefile.am  configure.ac
gb.input/src/: Makefile.am  evdev.c  evdev.h  gb.input.component  main.c  main.h
gb.jit/: AUTHORS  Makefile.am  README  configure.ac
gb.jit.llvm/: Makefile.am  README  component.am  configure.ac
gb.jit.llvm/src/: Makefile.am  gb.jit.llvm.component  jit.h  jit_api.cpp  jit_codegen.cpp  jit_codegen_conv.h  jit_runtime.c  main.cpp
(+7723 files in other folders)
