dnl ---------------------------------------------------
dnl
dnl   configure.in for Gambas development environment
dnl   (c) Benoît Minisini 2000-2005
dnl
dnl ----------------------------------------------------

dnl ---- Initialization

AC_INIT(configure.ac)
GB_INIT_SHORT(ide)

dnl ---- Create makefiles

AC_OUTPUT( \
Makefile \
)
