dnl ---------------------------------------------------
dnl
dnl   configure.in for components written in Gambas
dnl   (c) Benoît Minisini 2000-2005
dnl
dnl ----------------------------------------------------

dnl ---- Initialization

AC_INIT(configure.ac)
GB_INIT_SHORT(comp)

dnl ---- Create makefiles

AC_OUTPUT( \
Makefile \
)
